deploy/kustomize/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: admin
    app.kubernetes.io/part-of: docker-mailserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
      app.kubernetes.io/component: admin
      app.kubernetes.io/part-of: docker-mailserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
        app.kubernetes.io/component: admin
        app.kubernetes.io/part-of: docker-mailserver
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: web
                    app.kubernetes.io/component: admin
                    app.kubernetes.io/part-of: docker-mailserver
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - name: web
          image: jeboehm/mailserver-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/healthcheck.sh
            initialDelaySeconds: 45
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /login
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - name: tmp
              mountPath: /tmp
              subPath: tmp
            - name: tmp
              mountPath: /opt/admin/var/cache/prod
              subPath: cache
            - name: tmp
              mountPath: /opt/admin/var/log
              subPath: log
            - name: tmp
              mountPath: /opt/roundcube/temp
              subPath: rc-temp
            - name: tmp
              mountPath: /opt/roundcube/logs
              subPath: rc-logs
            - name: tmp
              mountPath: /var/www/html/autoconfig
              subPath: autoconfig
              readOnly: true
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
