deploy/kustomize/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: admin
    app.kubernetes.io/part-of: docker-mailserver
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: admin
    app.kubernetes.io/part-of: docker-mailserver
